cambio file yml
dovrebbero runnare su entrambi i branches

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -30,7 +30,9 @@ name: SonarCloud analysis
 
 on:
   push:
-    branches: [ "dev" ]
+    branches: 
+    - 'documentation'
+    - 'dev'
   pull_request:
     branches: [ "dev" ]
   workflow_dispatch:
