cambio file yml
ora dovrebbero runnare su entrambi i branhces

--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -1,7 +1,9 @@
 # Triggers
 on:
   push:
-    branches: [ "dev" ]
+    branches: 
+    - 'documentation'
+    - 'dev'
   pull_request:
     branches: [ "dev" ]
 # Functions
