--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=Manto00_ShowRoom3DForked
 sonar.organization=manto00
+sonar.working.directory=../prova/
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=ShowRoom3DForked
